# 2026-1-Autonomous-Robotics-Coursework

./: .gitignore
cw_interfaces/: CMakeLists.txt  package.xml
ex01_cpp_srvcli/: CMakeLists.txt  package.xml
ex01_cpp_srvcli/src/: add_two_ints_client.cpp  add_two_ints_server.cpp  cw_pub.cpp  cw_server.cpp  cw_sub_cli.cpp
final_pkg/: CMakeLists.txt  NAVIGATION_TUNING_LOG.md  package.xml
final_pkg/config/: mapper_params_online_async.yaml  nav2_params.yaml
final_pkg/launch/: rviz_launch.py
final_pkg/rviz/: final_navigation.rviz
final_pkg/src/: maze_explorer.cpp  moor_control.cpp  motor_control.cpp  motor_control_test.cpp
final_pkg_2/: CMakeLists.txt  NAVIGATION_TUNING_LOG.md  package.xml
final_pkg_2/config/: nav2_params.yaml
final_pkg_2/launch/: maze_grid_navigator_launch.py  rviz_launch.py
final_pkg_2/src/: maze_explorer.cpp  maze_explorer_v2.cpp  maze_grid_navigator.cpp
final_test_10_pkg/: CMakeLists.txt  package.xml
final_test_10_pkg/config/: nav2_params_corridor_v10_mppi_safety.yaml
final_test_10_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_10_pkg/rviz/: final_navigation.rviz
final_test_10_pkg/src/: cmd_vel_safety_filter_v9.cpp  maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_2_pkg/: CMakeLists.txt  package.xml
final_test_2_pkg/config/: nav2_params_corridor_v9_safety.yaml
final_test_2_pkg/launch/: rviz_launch.py
final_test_2_pkg/rviz/: final_navigation.rviz
final_test_2_pkg/src/: cmd_vel_safety_filter_v9.cpp  v9_build_and_launch_notes.txt
final_test_3_pkg/: CMakeLists.txt  package.xml
final_test_3_pkg/config/: nav2_params_corridor_v9_safety.yaml
final_test_3_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_3_pkg/src/: cmd_vel_safety_filter_v9.cpp  maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_4_pkg/: CMakeLists.txt  package.xml
final_test_4_pkg/config/: nav2_params_corridor_v9_safety.yaml
final_test_4_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_4_pkg/src/: maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_5_pkg/: CMakeLists.txt  package.xml
final_test_5_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_5_pkg/src/: maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_6_pkg/: CMakeLists.txt  package.xml
final_test_6_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_6_pkg/rviz/: final_navigation.rviz
final_test_6_pkg/src/: maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_7_pkg/: CMakeLists.txt  package.xml
final_test_7_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_7_pkg/src/: v9_build_and_launch_notes.txt
final_test_8_pkg/: CMakeLists.txt  package.xml
final_test_8_pkg/config/: mapper_params_online_async.yaml  nav2_params_corridor_v9_safety.yaml
final_test_8_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_8_pkg/rviz/: final_navigation.rviz
final_test_8_pkg/src/: cmd_vel_safety_filter_v9.cpp  maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_9_pkg/: CMakeLists.txt  package.xml
final_test_9_pkg/config/: nav2_params_corridor_v9_safety.yaml
final_test_9_pkg/launch/: bringup_sequence_launch.py  rviz_launch.py
final_test_9_pkg/rviz/: final_navigation.rviz
final_test_9_pkg/src/: cmd_vel_safety_filter_v9.cpp  maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_lidar_pkg/: CMakeLists.txt  README.md  package.xml
final_test_lidar_pkg/config/: lidar_escape_params.yaml
final_test_lidar_pkg/launch/: lidar_escape.launch.py
final_test_lidar_pkg/src/: lidar_escape_node.cpp
final_test_pkg/: CMakeLists.txt  package.xml
final_test_pkg/config/: nav2_params_corridor_v9_safety.yaml
final_test_pkg/src/: cmd_vel_safety_filter_v9.cpp  maze_explorer.cpp  v9_build_and_launch_notes.txt
final_test_u_pkg/: CMakeLists.txt  package.xml
final_test_u_pkg/config/: nav2_params_corridor_v9_safety.yaml
final_test_u_pkg/launch/: rviz_launch.py
final_test_u_pkg/src/: maze_explorer.cpp  v9_build_and_launch_notes.txt
final_u_pkg/: CMakeLists.txt  NAVIGATION_TUNING_LOG.md  package.xml
final_u_pkg/config/: mapper_params_online_async.yaml  nav2_params.yaml
final_u_pkg/launch/: rviz_launch.py
final_u_pkg/rviz/: final_navigation.rviz
final_u_pkg/src/: maze_explorer.cpp  maze_explorer_centerline.cpp  maze_runner.cpp  motor_control_test.cpp
laser_read/: CMakeLists.txt  package.xml
laser_read/src/: cw01_publisher.cpp  cw01_subscriber.cpp  ex01_laser_read.cpp
lec01_pkg/: CMakeLists.txt  package.xml
lec01_pkg/src/: cw01_publisher.cpp  cw01_subscriber.cpp  ex01_publisher.cpp  ex01_subscriber.cpp  prac01_pub.cpp  prac01_sub.cpp
midterm_pkg/: CMakeLists.txt  package.xml
midterm_pkg/src/: angle_publisher.cpp  motor_control.cpp  velocity_publisher.cpp
more_interfaces/: CMakeLists.txt  package.xml
motor_control_pkg/: CMakeLists.txt  package.xml
motor_control_pkg/src/: cw_motor_control.cpp  motor_control.cpp
read_imu/: CMakeLists.txt  package.xml
read_imu/src/: cw_subscriber.cpp  imu_subscriber.cpp
read_realsense/: CMakeLists.txt  package.xml
read_realsense/src/: cw_pub.cpp  cw_sub.cpp  ex01.cpp
